# scalereg

./: pyproject.toml
.github/workflows/: build.yml
print/: create_badges.py
scalereg/: settings.py  urls.py
scalereg/auth_helper/: admin.py  models.py  views.py
scalereg/common/: utils.py  views.py
scalereg/reg6/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
scalereg/reg6/migrations/: 0001_initial.py  0002_ticket_priority.py
scalereg/reg6/staff/: urls.py  views.py
scalereg/reports/: urls.py  views.py
scalereg/sponsorship/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
